fixed jumping pages

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -27,8 +27,13 @@ button{
 h1, h2, h3, h4{
   
 }
+.error-false{
+  color:white;
+}
+.error-true{
+  color:red;
+}
 .error{
-  color: red;
   font-size: 50%;
 }
 .main-container{
